website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.6.3/guides/markdown-features/markdown-features-intro.mdx
---
id: introduction
description: Docusaurus uses MDX. Find out more about Docusaurus-specific features when writing Markdown.
slug: /markdown-features
---

# Markdown 功能

import BrowserWindow from '@site/src/components/BrowserWindow';

Docusaurus 使用 **[Markdown](https://commonmark.org/)** 作為其主要內容撰寫格式。

:::tip[學習 Markdown]

你可以[在 10 分鐘內學會 Markdown](https://commonmark.org/help/)。

:::

Docusaurus 使用現代化工具幫助你建立**互動式文檔**。

**[MDX](https://mdxjs.com/)** 編譯器會將 **Markdown 文件轉換為 React 組件**，並允許你在 Markdown 內容中使用 JSX。這讓你能輕鬆地在內容中穿插 React 組件，創造愉悅的學習體驗。

:::tip[使用 MDX 遊樂場]

**[MDX 遊樂場](https://mdxjs.com/playground/)** 是你最好的新朋友！

這是一個非常有用的除錯工具，能展示 MDX 編譯器如何將 Markdown 轉換為 React。

**選項**：選擇正確的格式（MDX 或 CommonMark）以及 Docusaurus 使用的以下插件：`remark-gfm`、`remark-directive`、`rehype-raw`。

:::

## MDX 與 CommonMark 比較 {#mdx-vs-commonmark}

Docusaurus 使用 MDX 編譯器將 `.md` 和 `.mdx` 文件都編譯為 React 組件，但**根據你的設置，語法可能會被不同解讀**。

MDX 編譯器支援 [2 種格式](https://mdxjs.com/packages/mdx/#optionsformat)：

- [MDX 格式](https://mdxjs.com/docs/what-is-mdx/)：強大的解析器，允許使用 JSX
- [CommonMark 格式](https://commonmark.org/)：標準合規的 Markdown 解析器，不允許使用 JSX

預設情況下，**Docusaurus v3 出於歷史原因對所有文件（包括 `.md` 文件）使用 MDX 格式**。

你可以透過 [`siteConfig.markdown.format`](../../api/docusaurus.config.js.mdx#markdown) 設置或 `mdx.format: md` 前置元數據**選擇使用 CommonMark**。

:::tip[如何使用 CommonMark]

如果你計劃使用 CommonMark，我們推薦 [`siteConfig.markdown.format: 'detect'`](../../api/docusaurus.config.js.mdx#markdown) 設置。系統會根據文件擴展名自動選擇合適的格式：

- `.md` 文件將使用 CommonMark 格式
- `.mdx` 文件將使用 MDX 格式

:::

:::danger[實驗性 CommonMark 支援]

CommonMark 支援目前處於**實驗階段**，並存在一些[限制](https://github.com/facebook/docusaurus/issues/9092)。

:::

## 標準功能 {#standard-features}

Markdown 是一種能讓你以可讀性高的語法撰寫格式化內容的語法。

```md
### My Doc Section

Hello world message with some **bold** text, some _italic_ text, and a [link](/)

![img alt](/img/docusaurus.png)
```

```mdx-code-block
<BrowserWindow>

<h3>My Doc Section</h3>

Hello world message with some **bold** text, some _italic_ text and a [link](/)

![img alt](/img/docusaurus.png)

</BrowserWindow>
```

<details>

<summary>Markdown is declarative</summary>

Some may assume a 1-1 correlation between Markdown and HTML, e.g., `![Preview](/img/docusaurus.png)` will always become `<img src="/img/docusaurus.png" alt="Preview" />`, as-is. However, _that is not the case_.

The Markdown syntax `![message](url)` only declaratively tells Docusaurus that an image needs to be inserted here, but we may do other things like transforming a [file path to URL path](./markdown-features-assets.mdx#images), so the generated markup may differ from the output of other Markdown renderers, or a naïve hand-transcription to the equivalent JSX/HTML code.

In general, you should only assume the _semantics_ of the markup (` ``` ` fences become [code blocks](./markdown-features-code-blocks.mdx); `>` becomes [quotes](#quotes), etc.), but not the actual compiled output.

</details>

## 前置元數據 {#front-matter}

前置元數據用於為你的 Markdown 文件添加元數據。所有內容插件都有自己的前置元數據結構，並使用前置元數據來豐富從內容或其他配置推斷出的預設元數據。

前置元數據位於文件最頂部，由三個破折號 `---` 包圍。內容以 [YAML](https://yaml.org/spec/1.2.2/) 格式解析。

```md
---
title: My Doc Title
more_data:
  - Can be provided
  - as: objects
    or: arrays
---
```

:::info

每個官方插件的 API 文檔都列出了支援的屬性：

- [文檔前置元數據](../../api/plugins/plugin-content-docs.mdx#markdown-front-matter)
- [部落格前置元數據](../../api/plugins/plugin-content-blog.mdx#markdown-front-matter)
- [頁面前置元數據](../../api/plugins/plugin-content-pages.mdx#markdown-front-matter)

:::

:::tip[強化你的前置資料]

使用 [Markdown 設定中的 `parseFrontMatter` 函數](../../api/docusaurus.config.js.mdx#markdown) 來提供自訂的前置資料解析器，或增強預設解析器。

你可以重複使用預設解析器，並用自有的專屬邏輯進行包裝。這讓你能實作便利的前置資料轉換、快捷方式，或是透過前置資料與 Docusaurus 外掛不支援的外部系統整合。

```js title="docusaurus.config.js"
export default {
  markdown: {
    // highlight-start
    parseFrontMatter: async (params) => {
      // 重複使用預設解析器
      const result = await params.defaultParseFrontMatter(params);

      // 處理前置資料描述中的佔位符
      result.frontMatter.description =
        result.frontMatter.description?.replaceAll('{{MY_VAR}}', 'MY_VALUE');

      // 建立自有的前置資料快捷方式
      if (result.frontMatter.i_do_not_want_docs_pagination) {
        result.frontMatter.pagination_prev = null;
        result.frontMatter.pagination_next = null;
      }

      // 重新命名來自其他系統的不支援前置資料
      if (result.frontMatter.cms_seo_summary) {
        result.frontMatter.description = result.frontMatter.cms_seo_summary;
        delete result.frontMatter.cms_seo_summary;
      }

      return result;
    },
    // highlight-end
  },
};
```

:::

## 引用 {#quotes}

Markdown 引用擁有精美的樣式：

```md
> Easy to maintain open source documentation websites.
>
> — Docusaurus
```

<BrowserWindow>

> Easy to maintain open source documentation websites.
>
> — Docusaurus

</BrowserWindow>

## 詳細資訊 {#details}

Markdown 可以嵌入 HTML 元素，而 [`details`](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/details) HTML 元素擁有精美的樣式：

````md
### Details element example

<details>
  <summary>Toggle me!</summary>

  This is the detailed content

  ```js
  console.log("Markdown features including the code block are available");
  ```

  You can use Markdown here including **bold** and _italic_ text, and [inline link](https://docusaurus.io)
  <details>
    <summary>Nested toggle! Some surprise inside...</summary>

    😲😲😲😲😲
  </details>
</details>
````

````mdx-code-block
<BrowserWindow>

<h3>Details element example</h3>

<details>
  <summary>Toggle me!</summary>

  This is the detailed content

  ```js
  console.log("Markdown features including the code block are available");
  ```

  You can use Markdown here including **bold** and _italic_ text, and [inline link](https://docusaurus.io)
  <details>
    <summary>Nested toggle! Some surprise inside...</summary>

    😲😲😲😲😲
  </details>
</details>

</BrowserWindow>
````

:::info

你可能會希望將 `<summary>` 保持在一行內。請注意 [MDX 會為換行建立額外的 HTML `<p>` 段落](https://mdxjs.com/migrating/v2/#jsx)。如有疑問，可使用 [MDX 遊樂場](https://mdxjs.com/playground/) 來排查 `<details>` 的渲染問題。

:::